Resolves: fdo#48011 writer idle-callbacks are halting when events pending

Writer does a lot of work, e.g. spell-checking, word counting etc. in
idle-callbacks. It halts work by checking for AnyInput, and if any input or
paint etc is pending the idle-callbacks stop. With gtk3 rework pending
events don't seem to be available quite right.